...
    ? song.artist.name
    : `${song.artist.name}${duration ? ` • ${formatDuration(duration)}` : ""}`;

  return (
    <>
      <LibraryItem
        testID="library-track-item"
        cover={song.cover}
        title={song.title}
        subtext={subtext}
        isGridView={isGridView}
        gridWidth={gridWidth}
        gridSpacing={gridSpacing}
...
